[package]
name = "net-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.27"
tracing-futures = "0.2.0"
tracing-subscriber = "0.3.17"