[package]
name = "net-serve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.17"
tracing = "0.1.27"
tracing-futures = "0.2.0"
tracing-subscriber = "0.3.17"
mini-redis = "0.4.1"
socket2 = "0.5.3"
console = "0.15.7"
